# fraudnet-2.0

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .tool-versions  CLAUDE.md  DECISIONS.md  Dockerfile.dev  Makefile  Procfile.dev  README.md  docker-compose.dev.yml  pyproject.toml  turbo.json
services/action-tier1/: Dockerfile  README.md  pyproject.toml
services/action-tier1/src/action_tier1/: __init__.py  __main__.py  actuators.py  main.py  runner.py  settings.py
services/action-tier1/tests/: actuators_test.py
services/action-tier2/: Dockerfile  README.md  pyproject.toml
services/action-tier2/src/action_tier2/: __init__.py  __main__.py  actuators.py  locale.py  main.py  protection.py  runner.py  settings.py
services/action-tier2/tests/: actuators_test.py
services/aml-watchlist/: Dockerfile  README.md  pyproject.toml
services/aml-watchlist/migrations/: 0001_watchlist_schema.sql
services/aml-watchlist/src/aml_watchlist/: __init__.py  __main__.py  api.py  client.py  db.py  feeds.py  main.py  matcher.py  matching.py  refresh.py  settings.py
services/aml-watchlist/tests/: feeds_test.py  matching_test.py
services/api-customer/: Dockerfile  README.md  pyproject.toml
services/api-customer/src/api_customer/: __init__.py  __main__.py  api.py  main.py  otp.py  session.py  settings.py
services/api-customer/tests/: api_test.py  otp_test.py  session_test.py
services/api-enterprise/: Dockerfile  README.md  pyproject.toml
services/api-enterprise/migrations/: 0001_enterprise_schema.sql
services/api-enterprise/src/api_enterprise/: __init__.py  __main__.py  api.py  db.py  main.py  rate_limit.py  settings.py
services/api-enterprise/tests/: api_test.py  rate_limit_test.py
services/api-noc/: Dockerfile  README.md  pyproject.toml
services/api-noc/migrations/: 0001_initial.sql
services/api-noc/src/api_noc/: __init__.py  __main__.py  api.py  db.py  main.py  settings.py
services/api-noc/tests/: graph_views_test.py  transitions_test.py
services/brain-agent/: Dockerfile  README.md  pyproject.toml
services/brain-agent/src/brain_agent/: __init__.py  __main__.py  agent.py  api.py  evidence.py  llm.py  main.py  prompt.py  rate_limit.py  report.py  settings.py
services/brain-agent/tests/: agent_test.py  api_test.py  prompt_test.py  report_test.py
services/brain-behavioural/: Dockerfile  README.md  pyproject.toml
services/brain-behavioural/src/brain_behavioural/: __init__.py  __main__.py  api.py  lgbm_scorer.py  main.py  runner.py  scorer.py  settings.py
services/brain-behavioural/tests/: api_test.py  lgbm_scorer_test.py  scorer_test.py
services/brain-content/: Dockerfile  README.md  pyproject.toml
services/brain-content/src/brain_content/: __init__.py  __main__.py  api.py  classifier.py  dns_scanner.py  main.py  ml_classifier.py  ott_domain_analysis.py  runner.py  settings.py  url_reputation.py
services/brain-content/tests/: api_test.py  classifier_test.py  ml_classifier_test.py  ott_domain_analysis_test.py  url_reputation_test.py
services/brain-graph/: Dockerfile  README.md  pyproject.toml
services/brain-graph/src/brain_graph/: __init__.py  __main__.py  analyzer.py  api.py  community.py  cross_opco.py  main.py  motifs.py  rings.py  runner.py  settings.py  subgraph.py
services/brain-graph/tests/: community_test.py  cross_opco_test.py  motifs_test.py  rings_test.py
services/brain-otp-guard/: Dockerfile  README.md  pyproject.toml
services/brain-otp-guard/src/brain_otp_guard/: __init__.py  __main__.py  detector.py  main.py  registry.py  runner.py  settings.py
services/brain-otp-guard/tests/: detector_test.py  registry_test.py  runner_test.py
services/business-registry/: Dockerfile  README.md  pyproject.toml
services/business-registry/migrations/: 0001_initial.sql
services/business-registry/src/business_registry/: __init__.py  __main__.py  api.py  client.py  main.py  registry.py  settings.py
services/business-registry/tests/: api_test.py  registry_test.py
services/compliance/: Dockerfile  README.md  pyproject.toml
services/compliance/migrations/: 0001_audit.sql
services/compliance/src/compliance/: __init__.py  __main__.py  api.py  archive.py  main.py  runner.py  settings.py  store.py
services/compliance/tests/: api_test.py  archive_test.py  regulators_test.py  runner_test.py  store_test.py
services/decisions/: Dockerfile  README.md  pyproject.toml
services/decisions/policies/: default.yaml
services/decisions/src/decisions/: __init__.py  __main__.py  dispatcher.py  hot_reload.py  main.py  policy.py  runner.py  settings.py  suppression.py
services/decisions/tests/: hot_reload_test.py  policy_test.py  suppression_test.py
services/ingest-data/: Dockerfile  README.md  pyproject.toml
services/ingest-data/src/ingest_data/: __init__.py  __main__.py  adapter.py  api.py  deps.py  idempotency.py  main.py  normaliser.py  settings.py
services/ingest-data/tests/: adapter_test.py  api_test.py  normaliser_test.py
services/ingest-momo/: .dockerignore  Dockerfile  README.md  pyproject.toml
services/ingest-momo/src/ingest_momo/: __init__.py  __main__.py  adapter.py  api.py  deps.py  idempotency.py  main.py  settings.py
services/ingest-momo/tests/: adapter_test.py  api_test.py  idempotency_test.py
services/ingest-voice/: Dockerfile  README.md  pyproject.toml
services/ingest-voice/src/ingest_voice/: __init__.py  __main__.py  adapter.py  api.py  deps.py  main.py  (+2 more)
services/ingest-voice/tests/: adapter_test.py  api_test.py
services/intel-repository/: Dockerfile  README.md  pyproject.toml
services/intel-repository/migrations/: 0001_intel_schema.sql
services/intel-repository/tests/: cache_test.py  populator_test.py
services/stream-features/: .dockerignore  Dockerfile  README.md  pyproject.toml
services/stream-features/tests/: pipeline_test.py  pyflink_job_test.py
services/stream-graph/: Dockerfile  README.md  pyproject.toml
services/stream-graph/tests/: pipeline_test.py  pyflink_job_test.py
services/url-intel/: Dockerfile  README.md  pyproject.toml
services/url-intel/tests/: api_test.py  blocklist_test.py
(+138 files in other folders)
