[project]
name = "fraudnet-backend"
version = "0.1.0"
description = "FraudNet 2.0 — MTN Ghana network-native fraud intelligence platform"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "Proprietary" }
dependencies = []

[dependency-groups]
dev = [
  "ruff>=0.7.4",
  "mypy>=1.13",
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=6.0",
  "pre-commit>=4.0",
  "honcho>=2.0",
  "testcontainers>=4.8",
  "pyyaml>=6.0",                 # used by scripts/create_topics.py
  "confluent-kafka>=2.6",        # used by scripts/create_topics.py + e2e tests
  "asyncpg>=0.30",               # used by scripts/seed_demo.py
  "neo4j>=5.27",                 # used by scripts/seed_demo.py (Memgraph driver)
  "aerospike>=15.0",             # used by scripts/seed_demo.py
]

[tool.uv.workspace]
members = [
  "services/*",
  "packages/*",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["packages", "services"]

[tool.ruff.lint]
select = [
  "E", "F", "W",      # pycodestyle, pyflakes
  "I",                # isort
  "B",                # flake8-bugbear
  "UP",               # pyupgrade
  "N",                # pep8-naming
  "ANN",              # flake8-annotations
  "ASYNC",            # flake8-async
  "S",                # flake8-bandit
  "RUF",              # ruff-specific
  "PL",               # pylint
  "TID",              # flake8-tidy-imports
  "G",                # flake8-logging-format
  "PIE",              # flake8-pie
  "SIM",              # flake8-simplify
]
ignore = [
  "ANN401",   # Allow Any in **kwargs
  "PLR0913",  # Too many arguments — FastAPI deps legitimately exceed
  "S101",     # Allow assert in tests
]

[tool.ruff.lint.per-file-ignores]
"*_test.py" = ["S101", "PLR2004", "ANN"]
"tests/**" = ["S101", "PLR2004", "ANN"]
"tools/**" = ["S101"]

[tool.ruff.lint.isort]
known-first-party = ["fraudnet"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_decorators = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["aerospike.*", "confluent_kafka.*", "gmpy2.*", "phonenumbers.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["packages", "services", "tests"]
python_files = ["*_test.py", "test_*.py"]
addopts = "-ra --strict-markers --strict-config"
asyncio_mode = "auto"
markers = [
  "integration: integration tests requiring Docker services",
  "load: load tests, run nightly only",
  "e2e: end-to-end tests against the live docker-compose stack (FRAUDNET_E2E=1)",
]

[tool.coverage.run]
branch = true
source = ["packages", "services"]
omit = ["*/tests/*", "*_test.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 75
