[project]
name = "action-tier2"
version = "0.1.0"
description = "Tier-2 NRT actuators (customer alerts, SafeGuard, wallet limits, SOC tickets)"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "httpx>=0.28",
  "fraudnet-schemas",
  "fraudnet-obs",
  "fraudnet-kafka",
]

[tool.uv.sources]
fraudnet-schemas = { workspace = true }
fraudnet-obs = { workspace = true }
fraudnet-kafka = { workspace = true }

[dependency-groups]
dev = ["fraudnet-testing"]

[tool.uv.sources.fraudnet-testing]
workspace = true

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/action_tier2"]
