[project]
name = "aml-watchlist"
version = "0.1.0"
description = "Sanctions/PEP/watchlist matching — UN, OFAC, GFIC, internal"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "asyncpg>=0.30",
  "redis>=5.2",
  "httpx>=0.28",
  "fraudnet-schemas",
  "fraudnet-obs",
  "fraudnet-audit",
  "fraudnet-auth",
]

[tool.uv.sources]
fraudnet-schemas = { workspace = true }
fraudnet-obs = { workspace = true }
fraudnet-audit = { workspace = true }
fraudnet-auth = { workspace = true }

[dependency-groups]
dev = ["fraudnet-testing", "httpx>=0.28"]

[tool.uv.sources.fraudnet-testing]
workspace = true

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aml_watchlist"]
