[project]
name = "api-customer"
version = "0.1.0"
description = "Customer self-service API: alerts, report fraud, block/unblock, status"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "asyncpg>=0.30",
  "redis>=5.2",
  "pyjwt[crypto]>=2.10",
  "fraudnet-schemas",
  "fraudnet-obs",
  "fraudnet-kafka",
  "fraudnet-audit",
  "fraudnet-i18n",
]

[tool.uv.sources]
fraudnet-schemas = { workspace = true }
fraudnet-obs = { workspace = true }
fraudnet-kafka = { workspace = true }
fraudnet-audit = { workspace = true }
fraudnet-i18n = { workspace = true }

[dependency-groups]
dev = ["fraudnet-testing", "httpx>=0.28"]

[tool.uv.sources.fraudnet-testing]
workspace = true

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api_customer"]
