[project]
name = "api-noc"
version = "0.1.0"
description = "NOC investigator workbench API"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "asyncpg>=0.30",
  "fraudnet-schemas",
  "fraudnet-obs",
  "fraudnet-auth",
  "fraudnet-audit",
  "fraudnet-graph",
]

[tool.uv.sources]
fraudnet-schemas = { workspace = true }
fraudnet-obs = { workspace = true }
fraudnet-auth = { workspace = true }
fraudnet-audit = { workspace = true }
fraudnet-graph = { workspace = true }

[dependency-groups]
dev = ["fraudnet-testing", "httpx>=0.28"]

[tool.uv.sources.fraudnet-testing]
workspace = true

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api_noc"]

[tool.hatch.build.targets.wheel.force-include]
"migrations" = "api_noc/migrations"
