[project]
name = "brain-behavioural"
version = "0.1.0"
description = "Behavioural scoring — heuristic in Phase 1, ML-backed in Phase 2"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "lightgbm>=4.5",
  "fraudnet-schemas",
  "fraudnet-obs",
  "fraudnet-kafka",
  "fraudnet-features",
  "fraudnet-model-registry",
  "fraudnet-xai",
  "business-registry",
  "httpx>=0.28",
]

[tool.uv.sources]
fraudnet-schemas = { workspace = true }
fraudnet-obs = { workspace = true }
fraudnet-kafka = { workspace = true }
fraudnet-features = { workspace = true }
fraudnet-model-registry = { workspace = true }
fraudnet-xai = { workspace = true }
business-registry = { workspace = true }

[dependency-groups]
dev = ["fraudnet-testing", "httpx>=0.28"]

[tool.uv.sources.fraudnet-testing]
workspace = true

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/brain_behavioural"]
