[project]
name = "business-registry"
version = "0.1.0"
description = "Verified business sender registry — MSISDNs and short codes"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "asyncpg>=0.30",
  "redis>=5.2",
  "fraudnet-schemas",
  "fraudnet-obs",
  "fraudnet-audit",
]

[tool.uv.sources]
fraudnet-schemas = { workspace = true }
fraudnet-obs = { workspace = true }
fraudnet-audit = { workspace = true }

[dependency-groups]
dev = ["fraudnet-testing", "httpx>=0.28"]

[tool.uv.sources.fraudnet-testing]
workspace = true

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/business_registry"]

[tool.hatch.build.targets.wheel.force-include]
"migrations" = "business_registry/migrations"
