[project]
name = "decisions"
version = "0.1.0"
description = "Decision orchestrator: signals/motifs → DecisionDispatchedV1 per tier"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pyyaml>=6.0",
  "redis>=5.2",
  "watchdog>=5.0",
  "fraudnet-schemas",
  "fraudnet-obs",
  "fraudnet-kafka",
]

[tool.uv.sources]
fraudnet-schemas = { workspace = true }
fraudnet-obs = { workspace = true }
fraudnet-kafka = { workspace = true }

[dependency-groups]
dev = ["fraudnet-testing", "httpx>=0.28"]

[tool.uv.sources.fraudnet-testing]
workspace = true

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/decisions"]

[tool.hatch.build.targets.wheel.force-include]
"policies" = "decisions/policies"
