[project]
name = "ingest-momo"
version = "0.1.0"
description = "MoMo event listener → Kafka momo.events.v1"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "redis>=5.2",
  "fraudnet-schemas",
  "fraudnet-obs",
  "fraudnet-kafka",
  "fraudnet-audit",
  "fraudnet-auth",
]

[tool.uv.sources]
fraudnet-schemas = { workspace = true }
fraudnet-obs = { workspace = true }
fraudnet-kafka = { workspace = true }
fraudnet-audit = { workspace = true }
fraudnet-auth = { workspace = true }

[dependency-groups]
dev = [
  "fraudnet-testing",
  "httpx>=0.28",
]

[tool.uv.sources.fraudnet-testing]
workspace = true

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ingest_momo"]
