[project]
name = "stream-graph"
version = "0.1.0"
description = "Per-event Memgraph mutations from voice/sms/momo + graph.mutations.v1 control topic"
requires-python = ">=3.12"
dependencies = [
  "fraudnet-schemas",
  "fraudnet-obs",
  "fraudnet-kafka",
  "fraudnet-graph",
]

[tool.uv.sources]
fraudnet-schemas = { workspace = true }
fraudnet-obs = { workspace = true }
fraudnet-kafka = { workspace = true }
fraudnet-graph = { workspace = true }

[dependency-groups]
dev = ["fraudnet-testing", "pytest>=8.3"]

[tool.uv.sources.fraudnet-testing]
workspace = true

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stream_graph"]
