[project]
name = "url-intel"
version = "0.1.0"
description = "Real-time URL threat intelligence — blocklist, threat-feed import, sinkhole export"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "redis>=5.2",
  "fraudnet-schemas",
  "fraudnet-obs",
  "fraudnet-kafka",
]

[tool.uv.sources]
fraudnet-schemas = { workspace = true }
fraudnet-obs = { workspace = true }
fraudnet-kafka = { workspace = true }

[dependency-groups]
dev = ["fraudnet-testing", "httpx>=0.28"]

[tool.uv.sources.fraudnet-testing]
workspace = true

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/url_intel"]
